add refresh route
